--- a/MerlionPortal/MerlionPortal-war/web/grns/grnsindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/grnsindexpage.xhtml
@@ -44,7 +44,8 @@
         </ui:define>
 
         <ui:define name="right">
-            <div class="system-banner oes-system-banner"></div>
+            <div class="system-banner-overlay">GRNS</div>
+            <div class="system-banner grns-system-banner"></div>
 
             <h2 class="system-welcome">Welcome to Global Rate Negotiation System!</h2>
 
@@ -52,6 +53,7 @@
             <div class="system-welcome">
                 GRNS .<br></br>
             </div>
+            
             <div class="system-description">
                 Benefits of GRNS<br></br>
                 <br></br>
