--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewnode.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewnode.xhtml
@@ -99,30 +99,21 @@
                             <h:outputText value="" />
                         </f:facet>
                     </p:ajaxStatus>
-                    <p:panelGrid>
-                        <p:row>
-                            <p:column>
-                                <p:outputLabel for="nodeName" style="font-weight: bold" value="Node Name: " />
-                            </p:column>
-                            <p:column>
-                                <p:inputText required="true" label="nodeName" requiredMessage="Node Name is required." id="nodeName" value="#{nodeManagerBean.nodeName}">
-                                    <f:validateLength minimum="4" maximum="40" />
-                                </p:inputText>
-                            </p:column>                       
-                        </p:row>
+                    <h:panelGrid columns="3">
 
-                        <p:row>
-                            <p:column>
-                                <h:outputLabel for="nodeType" style="font-weight: bold" value="Node Type:  " />
-                            </p:column>
-                            <p:column>
-                                <p:inputText required="true" label="nodeType" requiredMessage="Node Type is required." id="nodeType" value="#{nodeManagerBean.nodeType}">
-                                    <f:validateLength minimum="1" maximum="19" />
-                                </p:inputText>
-                            </p:column>                             
-                        </p:row>  
+                        <p:outputLabel for="nodeName" style="font-weight: bold" value="Node Name: " /><p:spacer width="20" height="20" />
+                        <p:inputText required="true" label="nodeName" requiredMessage="Node Name is required." id="nodeName" value="#{nodeManagerBean.nodeName}">
+                            <f:validateLength minimum="1" maximum="40" />
+                        </p:inputText>
 
-                    </p:panelGrid>
+                        <p:outputLabel value="Node Type: " /><p:spacer width="20" height="20" />
+                        <p:selectOneRadio  value="#{nodeManagerBean.nodeType}">
+                            <f:selectItem itemLabel="Distribution Center" itemValue="Dist" />
+                            <f:selectItem itemLabel="Maintenance Center" itemValue="Maint" />
+             
+                        </p:selectOneRadio>    
+                        <br></br>
+                    </h:panelGrid>
                     <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                     <p:commandButton id="btn" value="Create New Node" update="form" actionListener="#{nodeManagerBean.createNewNode(node)}" ajax="true" >
                     </p:commandButton>
